@@ -25,6 +25,7 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.apache.commons.logging.Log;
@@ -33,6 +34,7 @@ import org.apache.commons.logging.LogFactory;
 import org.rhq.bindings.StandardBindings;
 import org.rhq.bindings.client.RhqFacade;
 import org.rhq.bindings.script.BaseRhqSchemeScriptSourceProvider;
+import org.rhq.enterprise.communications.util.SecurityUtil;
 
 /**
  * @author Lukas Krejci
@@ -42,9 +44,15 @@ public class RhqDownloadsScriptSourceProvider extends BaseRhqSchemeScriptSourceP
 
     private static final Log LOG = LogFactory.getLog(RhqDownloadsScriptSourceProvider.class);
 
-    private static final String PREFIX = "//downloads/";
+    private static final String AUTHORITY = "downloads";
+
+    private static final String URL_PATH_PREFIX = "/downloads/script-modules";
 
     private RemoteClient remoteClient;
+
+    public RhqDownloadsScriptSourceProvider() {
+        super(AUTHORITY);
+    }
 
     @Override
     public void rhqFacadeChanged(StandardBindings bindings) {
@@ -63,25 +71,26 @@ public class RhqDownloadsScriptSourceProvider extends BaseRhqSchemeScriptSourceP
             return null;
         }
 
-        String path = scriptUri.getSchemeSpecificPart();
+        String path = scriptUri.getPath();
 
-        if (!path.startsWith(PREFIX)) {
-            return null;
-        }
+        URI remoteUri = remoteClient.getRemoteURI().resolve(URL_PATH_PREFIX + path);
 
-        path.substring(1); //remove the leading '/'
-
-        String urlString = remoteClient.getTransport() + "://" + remoteClient.getHost() + ":" + remoteClient.getPort()
-            + path;
+        String replacementScheme = SecurityUtil.isTransportSecure(remoteUri.getScheme()) ? "https" : "http";
 
         try {
-            URL downloadUrl = new URL(urlString);
+            remoteUri = new URI(replacementScheme, remoteUri.getAuthority(), remoteUri.getPath(), remoteUri.getQuery(), remoteUri.getFragment());
+        } catch (URISyntaxException e) {
+            LOG.error("Failed to copy the RHQ server download URI: " + remoteUri + " to the " + replacementScheme + " scheme.");
+        }
+
+        try {
+            URL downloadUrl = remoteUri.toURL();
 
             return new InputStreamReader(downloadUrl.openStream());
         } catch (MalformedURLException e) {
-            LOG.debug("Failed to download the script from the RHQ server using URL: " + urlString, e);
+            LOG.debug("Failed to download the script from the RHQ server using URL: " + remoteUri, e);
         } catch (IOException e) {
-            LOG.debug("Failed to download the script from the RHQ server using URL: " + urlString, e);
+            LOG.debug("Failed to download the script from the RHQ server using URL: " + remoteUri, e);
         }
 
         return null;
